chore: lint project